# landing_backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  manage.py  pyproject.toml
core/api/: schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/about/: handlers.py  schemas.py
core/api/v1/partnership/: handlers.py  schemas.py
core/api/v1/previous_meetings/: handlers.py  schemas.py
core/api/v1/program/: handlers.py  schemas.py
core/api/v1/registrations/: handlers.py  schemas.py
core/api/v1/speakers/: handlers.py  schemas.py
core/apps/about/: admin.py  apps.py  models.py  service.py
core/apps/about/migrations/: 0001_initial.py
core/apps/partnership/: admin.py  apps.py  models.py  service.py
core/apps/partnership/migrations/: 0001_initial.py
core/apps/previous_meetings/: admin.py  apps.py  models.py  service.py
core/apps/previous_meetings/migrations/: 0001_initial.py  0002_remove_previousmeetingsmodel_title.py
core/apps/program/: admin.py  apps.py  models.py  service.py
core/apps/program/migrations/: 0001_initial.py  0002_alter_programmodel_options.py
core/apps/registrations/: admin.py  apps.py  models.py  service.py  tasks.py
core/apps/registrations/migrations/: 0001_initial.py  0002_alter_registrationsmodel_comments_and_more.py
core/apps/speakers/: admin.py  apps.py  models.py  service.py
core/apps/speakers/migrations/: 0001_initial.py  0002_alter_speakersmodel_created_at_and_more.py
core/project/: asgi.py  urls.py  wsgi.py
core/project/settings/: main.py
docker_compose/: app.yaml  storages.yaml
